# face-cluster

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: cluster_faces.py  config.py  constants.py  encode_faces.py  logger.py  requirements.txt
