[tool.poetry]
name = "face-cluster"
version = "1.0.0"
description = "application that receives a dataset of faces and creates a cluster of images that have similarity."
authors = ["felipeversiane <felipeversiane09@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
